--- a/app/src/main/res/layout/activity_orders_description.xml
+++ b/app/src/main/res/layout/activity_orders_description.xml
@@ -115,8 +115,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/placeDes"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="59dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/custom_button2"
 
             android:text="@string/eliminar" />
@@ -126,21 +126,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/placeDes"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="77dp"
             android:background="@drawable/custom_button2"
             android:text="@string/editar" />
 
         <Button
-            android:id="@+id/buttonEnviarPedido"
+            android:id="@+id/buttonEnviarPedidoSMS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/placeDes"
+            android:layout_below="@id/buttonEliminarPedido"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="77dp"
             android:background="@drawable/custom_button2"
-            android:text="@string/enviar" />
+            android:text="@string/enviarSMS" />
+
+        <Button
+            android:id="@+id/buttonEnviarPedidoWhatsapp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonEliminarPedido"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="240dp"
+            android:background="@drawable/custom_button2"
+            android:text="@string/enviarWhatsapp" />
 
 
     </RelativeLayout>
